--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,19 @@
 Source: pomodoro-timer
-Section: devel
-Priority: optional
 Maintainer: Evgeniy Asvatov <evgeniy.asvatov@phystech.edu>
+Section: gnome
+Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 9), python3, dh-virtualenv (>= 1.0),
-    python3-setuptools, python3-pip, python3-dev, libffi-dev, python3-dbus (>=1.2.0-3), python3-gi (>=3.20.0-0ubuntu1)
-Vcs-Git: git@github.com:asvatov/pomodoro-timer.git
+Build-Depends: debhelper (>= 9), python3 (>= 3.5), dh-virtualenv (>= 1.0), python3-setuptools, python3-pip,
+ python3-dev, libffi-dev, python3-dbus (>= 1.2.0-3), python3-gi (>= 3.20.0-0ubuntu1), python3-gi-cairo (>= 3.20.0-0ubuntu1),
+ gir1.2-gtk-3.0 (>= 3.18.9-1ubuntu3.3)
+Vcs-Git: https://github.com/asvatov/pomodoro-timer.git
 Homepage: https://github.com/asvatov/pomodoro-timer
 
 Package: pomodoro-timer
 Architecture: any
+Section: gnome
+Priority: optional
 Pre-Depends: dpkg (>= 1.16.1), python3 (>= 3.5), ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}
-Description: Pomodoro Technique. Bla bla bla bla
- bla bla bla
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}
+Description: Pomodoro Technique.
+ Bla bla bla bla bla bla bla.
