--- a/resources/configs/timer_config.json
+++ b/resources/configs/timer_config.json
@@ -1,1 +1,1 @@
-{"long_break_length": 20.0, "session_length": 25.0, "number_of_pomodoros": 5.0, "break_length": 5.0}
+{"number_of_pomodoros": 4.0, "session_length": 25.0, "break_length": 5.0, "long_break_length": 20.0}
