--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Evgeniy Asvatov <evgeniy.asvatov@phystech.edu>
 Section: gnome
 Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 9), python3 (>= 3.5), dh-virtualenv (>= 1.0), python3-setuptools, python3-pip,
+Build-Depends: debhelper (>= 9), python3 (>= 3.5), dh-virtualenv (>= 0.11-1), python3-setuptools, python3-pip,
  python3-dev, libffi-dev, python3-dbus (>= 1.2.0-3), python3-gi (>= 3.20.0-0ubuntu1), python3-gi-cairo (>= 3.20.0-0ubuntu1),
  gir1.2-gtk-3.0 (>= 3.18.9-1ubuntu3.3)
 Vcs-Git: https://github.com/asvatov/pomodoro-timer.git
