fix debian files

--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,12 @@
 
 %:
 	dh $@ --python /usr/bin/python3 --with python-virtualenv --preinstall "pip>=8"
+
+override_dh_virtualenv:
+	dh_virtualenv --python python3
+
 override_dh_install:
 	dh_install resources/img/* usr/share/pomodoro-timer/img
 	dh_install resources/sounds/* usr/share/pomodoro-timer/sounds
+
+override_dh_clean:
