--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Maintainer: Evgeniy Asvatov <evgeniy.asvatov@phystech.edu>
 Section: gnome
 Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 9), python3 (>= 3.5), dh-virtualenv (>= 1.1), python3-setuptools, python3-pip,
- python3-dev, libffi-dev, python3-gi (>= 3.20.0-0ubuntu1),
+Build-Depends: debhelper (>= 9), python3 (>= 3.5), dh-virtualenv (>= 1.0), python3-setuptools,
+ python3-pip, python3-dev, libffi-dev (>= 3.2.1-4), python3-gi (>= 3.20.0-0ubuntu1),
  python3-gi-cairo (>= 3.20.0-0ubuntu1), gir1.2-gtk-3.0 (>= 3.18.9-1ubuntu3.3)
 Vcs-Git: https://github.com/asvatov/pomodoro-timer.git
 Homepage: https://github.com/asvatov/pomodoro-timer
@@ -14,6 +14,6 @@ Architecture: any
 Section: gnome
 Priority: optional
 Pre-Depends: dpkg (>= 1.16.1), python3 (>= 3.5), ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Pomodoro Technique.
  Bla bla bla bla bla bla bla.
